[package]
name = "load_testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonrpc-core = "18.0.0"
jsonrpc-http-server = "18.0.0"
jsonrpc-derive = "18.0.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.26.0", features = ["full"] }
structopt = "0.3.26"
serde_json = "1.0.94"
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
csv = "1.1"
log = "0.4"
simple_logger = "4.1.0"
chrono = "0.4"
